Revert "* - Fix contrast in style-dark.css for = button"
This reverts commit 6faf37fe796b103b03551b9f07fe91e452c61cce.

--- a/src/ui/style-dark.css
+++ b/src/ui/style-dark.css
@@ -1,6 +1,6 @@
 /* Recoloring of the app comes below… */
 .suggested-action {
-  background: @orange_4;
+  background: @orange_1;
 }
 
 .function-button,
